outputs_20260402-095956-87e275f3/codegen/production/build_logs/compiler_stderr.log
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c: In function ‘interruptEgtmAtom’:
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:35:42: error: ‘MODULE_P03’ undeclared (first use in this function); did you mean ‘MODULE_P33’?
   35 | #define EGTM_DEBUG_LED                  &MODULE_P03, 9
      |                                          ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:86:23: note: in expansion of macro ‘EGTM_DEBUG_LED’
   86 |     IfxPort_togglePin(EGTM_DEBUG_LED);
      |                       ^~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:35:42: note: each undeclared identifier is reported only once for each function it appears in
   35 | #define EGTM_DEBUG_LED                  &MODULE_P03, 9
      |                                          ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:86:23: note: in expansion of macro ‘EGTM_DEBUG_LED’
   86 |     IfxPort_togglePin(EGTM_DEBUG_LED);
      |                       ^~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c: In function ‘resultISR’:
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:35:42: error: ‘MODULE_P03’ undeclared (first use in this function); did you mean ‘MODULE_P33’?
   35 | #define EGTM_DEBUG_LED                  &MODULE_P03, 9
      |                                          ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:98:23: note: in expansion of macro ‘EGTM_DEBUG_LED’
   98 |     IfxPort_togglePin(EGTM_DEBUG_LED);
      |                       ^~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c: In function ‘initEgtmAtom3phInv’:
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:40:43: error: ‘IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT’ undeclared (first use in this function)
   40 | #define PHASE_U_HS                      (&IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT)
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:140:66: note: in expansion of macro ‘PHASE_U_HS’
  140 |     invOutCfg[0].pin                    = (IfxEgtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                                  ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:41:43: error: ‘IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT’ undeclared (first use in this function)
   41 | #define PHASE_U_LS                      (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:141:66: note: in expansion of macro ‘PHASE_U_LS’
  141 |     invOutCfg[0].complementaryPin       = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                                  ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:142:43: error: ‘Ifx_ActiveState_high’ undeclared (first use in this function); did you mean ‘Ifx_ActiveState’?
  142 |     invOutCfg[0].polarity               = Ifx_ActiveState_high;
      |                                           ^~~~~~~~~~~~~~~~~~~~
      |                                           Ifx_ActiveState
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:143:43: error: ‘Ifx_ActiveState_low’ undeclared (first use in this function); did you mean ‘Ifx_ActiveState’?
  143 |     invOutCfg[0].complementaryPolarity  = Ifx_ActiveState_low;
      |                                           ^~~~~~~~~~~~~~~~~~~
      |                                           Ifx_ActiveState
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:42:43: error: ‘IfxEgtm_ATOM0_1_TOUT66_P20_10_OUT’ undeclared (first use in this function)
   42 | #define PHASE_V_HS                      (&IfxEgtm_ATOM0_1_TOUT66_P20_10_OUT)
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:147:66: note: in expansion of macro ‘PHASE_V_HS’
  147 |     invOutCfg[1].pin                    = (IfxEgtm_Pwm_ToutMap *)PHASE_V_HS;
      |                                                                  ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:43:43: error: ‘IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT’ undeclared (first use in this function)
   43 | #define PHASE_V_LS                      (&IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT)
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:148:66: note: in expansion of macro ‘PHASE_V_LS’
  148 |     invOutCfg[1].complementaryPin       = (IfxEgtm_Pwm_ToutMap *)PHASE_V_LS;
      |                                                                  ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:44:43: error: ‘IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT’ undeclared (first use in this function)
   44 | #define PHASE_W_HS                      (&IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT)
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:154:66: note: in expansion of macro ‘PHASE_W_HS’
  154 |     invOutCfg[2].pin                    = (IfxEgtm_Pwm_ToutMap *)PHASE_W_HS;
      |                                                                  ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:45:43: error: ‘IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT’ undeclared (first use in this function)
   45 | #define PHASE_W_LS                      (&IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT)
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:155:66: note: in expansion of macro ‘PHASE_W_LS’
  155 |     invOutCfg[2].complementaryPin       = (IfxEgtm_Pwm_ToutMap *)PHASE_W_LS;
      |                                                                  ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:47:43: error: ‘IfxEgtm_ATOM0_3_TOUT22_P33_0_OUT’ undeclared (first use in this function)
   47 | #define ADC_TRIG_PIN                    (&IfxEgtm_ATOM0_3_TOUT22_P33_0_OUT)
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:212:65: note: in expansion of macro ‘ADC_TRIG_PIN’
  212 |     adcOutCfg[0].pin                   = (IfxEgtm_Pwm_ToutMap *)ADC_TRIG_PIN;
      |                                                                 ^~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:256:41: error: ‘IfxEgtm_TrigSource_atom0’ undeclared (first use in this function); did you mean ‘IfxEgtm_TrigSource_atom’?
  256 |                                         IfxEgtm_TrigSource_atom0,
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~
      |                                         IfxEgtm_TrigSource_atom
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:35:42: error: ‘MODULE_P03’ undeclared (first use in this function); did you mean ‘MODULE_P33’?
   35 | #define EGTM_DEBUG_LED                  &MODULE_P03, 9
      |                                          ^~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/src/egtm_atom_3_phase_inverter_pwm.c:277:30: note: in expansion of macro ‘EGTM_DEBUG_LED’
  277 |     IfxPort_setPinModeOutput(EGTM_DEBUG_LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~~~~~~~~~~~~

/tmp/tdd_build_3hpt4hvj/test/test_egtm_atom_3_phase_inverter_pwm.c:23:16: error: conflicting types for ‘mock_IfxEgtm_Pwm_init_callCount’; have ‘uint32’ {aka ‘unsigned int’}
   23 | extern uint32  mock_IfxEgtm_Pwm_init_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /tmp/tdd_build_3hpt4hvj/test/test_egtm_atom_3_phase_inverter_pwm.c:2:
/tmp/tdd_build_3hpt4hvj/include/mock_egtm_atom_3_phase_inverter_pwm.h:52:12: note: previous declaration of ‘mock_IfxEgtm_Pwm_init_callCount’ with type ‘int’
   52 | extern int mock_IfxEgtm_Pwm_init_callCount;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/test/test_egtm_atom_3_phase_inverter_pwm.c:24:16: error: conflicting types for ‘mock_IfxEgtm_Trigger_trigToAdc_callCount’; have ‘uint32’ {aka ‘unsigned int’}
   24 | extern uint32  mock_IfxEgtm_Trigger_trigToAdc_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/include/mock_egtm_atom_3_phase_inverter_pwm.h:85:16: note: previous declaration of ‘mock_IfxEgtm_Trigger_trigToAdc_callCount’ with type ‘int’
   85 | extern int     mock_IfxEgtm_Trigger_trigToAdc_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/test/test_egtm_atom_3_phase_inverter_pwm.c:27:16: error: conflicting types for ‘mock_togglePin_callCount’; have ‘uint32’ {aka ‘unsigned int’}
   27 | extern uint32  mock_togglePin_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_3hpt4hvj/include/mock_egtm_atom_3_phase_inverter_pwm.h:97:12: note: previous declaration of ‘mock_togglePin_callCount’ with type ‘int’
   97 | extern int mock_togglePin_callCount;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
